--- a/wiki/bg/Tree_View.html
+++ b/wiki/bg/Tree_View.html
@@ -82,7 +82,7 @@
 </p><p>&#1048;&#1084;&#1072; <a href="../Basic_Attachment_Tutorial.html" title="Basic Attachment Tutorial">Basic Attachment Tutorial</a>, &#1086;&#1073;&#1103;&#1089;&#1085;&#1103;&#1074;&#1072;&#1097; &#1082;&#1072;&#1082; &#1076;&#1072; &#1089;&#1077; &#1089;&#1087;&#1088;&#1072;&#1074;&#1103;&#1090;&#1077; &#1089; &#1090;&#1072;&#1082;&#1080;&#1074;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;.
 </p><p><span id="File:FreeCAD_Tree_view_notfullyconstrained.png_Yellow_X"></span>
 </p>
-<h3><span id=".D0.B6.D1.8A.D1.80.D1.82_X"></span><span class="mw-headline" id="&#1078;&#1098;&#1088;&#1090;_X"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_notfullyconstrained.png&amp;filetimestamp=20240413195703&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_notfullyconstrained.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> &#1078;&#1098;&#1088;&#1090; X</span></h3>
+<h3><span id=".D0.96.D1.8A.D0.BB.D1.82_X"></span><span class="mw-headline" id="&#1046;&#1098;&#1083;&#1090;_X"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_notfullyconstrained.png&amp;filetimestamp=20240413195703&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_notfullyconstrained.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> &#1046;&#1098;&#1083;&#1090; X</span></h3>
 <p>This is only used for <a href="../Sketch.html" title="Sketch">sketches</a> and indicates that the sketch is not fully constrained. If the sketch is in <a href="../Sketcher_EditSketch.html" title="Sketcher EditSketch">edit mode</a> the number of remaining degrees of freedom is shown in the <a href="../Sketcher_Dialog.html#Solver_messages" title="Sketcher Dialog">solver messages</a>.
 </p>
 <h3><span class="mw-headline" id="White_arrow_on_green_background"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_tip.png&amp;filetimestamp=20240413195037&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_tip.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> White arrow on green background</span></h3>
@@ -169,12 +169,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121052932
+Cached time: 20260121052950
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.157 seconds
-Real time usage: 0.364 seconds
+CPU time usage: 0.138 seconds
+Real time usage: 0.186 seconds
 Preprocessor visited node count: 758/1000000
 Post&#8208;expand include size: 38475/2097152 bytes
 Template argument size: 12431/2097152 bytes
@@ -185,19 +185,19 @@ Unstrip post&#8208;expand size: 2222/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   91.373      1 -total
- 20.30%   18.550      1 Template:Std_Base_navi/bg
- 16.26%   14.859      3 Template:Navigation_menu_2
- 13.72%   12.533      1 Template:Userdocnavi/bg
- 12.54%   11.454      1 Template:Interface_navi/bg
- 12.42%   11.349      1 Template:FALSE
- 10.63%    9.715      6 Template:MenuCommand
-  9.50%    8.681      2 Template:Caption
-  5.09%    4.654      1 Template:PropertyView
-  4.46%    4.071      2 Template:PropertyData
+100.00%   42.227      1 -total
+ 26.05%   11.000      1 Template:Std_Base_navi/bg
+ 18.78%    7.931      3 Template:Navigation_menu_2
+ 15.55%    6.568      1 Template:Interface_navi/bg
+ 14.97%    6.321      1 Template:Userdocnavi/bg
+  8.42%    3.554      2 Template:PropertyData
+  5.66%    2.389      1 Template:PropertyView
+  5.40%    2.281      3 Template:Variable
+  4.30%    1.816      1 Template:FALSE
+  4.21%    1.779     19 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260121052932 and revision id 1741770. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260121052950 and revision id 1741772. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
