--- a/wiki/bg/Tree_View.html
+++ b/wiki/bg/Tree_View.html
@@ -83,7 +83,7 @@
 </p><p><span id="File:FreeCAD_Tree_view_notfullyconstrained.png_Yellow_X"></span>
 </p>
 <h3><span id=".D0.96.D1.8A.D0.BB.D1.82_X"></span><span class="mw-headline" id="&#1046;&#1098;&#1083;&#1090;_X"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_notfullyconstrained.png&amp;filetimestamp=20240413195703&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_notfullyconstrained.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> &#1046;&#1098;&#1083;&#1090; X</span></h3>
-<p>This is only used for <a href="../Sketch.html" title="Sketch">sketches</a> and indicates that the sketch is not fully constrained. If the sketch is in <a href="../Sketcher_EditSketch.html" title="Sketcher EditSketch">edit mode</a> the number of remaining degrees of freedom is shown in the <a href="../Sketcher_Dialog.html#Solver_messages" title="Sketcher Dialog">solver messages</a>.
+<p>&#1058;&#1086;&#1074;&#1072; &#1089;&#1077; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072; &#1089;&#1072;&#1084;&#1086; &#1079;&#1072; &#1089;&#1082;&#1080;&#1094;&#1080; <a href="../Sketch.html" title="Sketch">sketches</a> &#1080; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072;, &#1095;&#1077; &#1089;&#1082;&#1080;&#1094;&#1072;&#1090;&#1072; &#1085;&#1077; &#1077; &#1085;&#1072;&#1087;&#1098;&#1083;&#1085;&#1086; &#1086;&#1075;&#1088;&#1072;&#1085;&#1080;&#1095;&#1077;&#1085;&#1072;. &#1040;&#1082;&#1086; &#1089;&#1082;&#1080;&#1094;&#1072;&#1090;&#1072; &#1077; &#1074; <a href="../Sketcher_EditSketch.html" title="Sketcher EditSketch">edit mode</a> &#1073;&#1088;&#1086;&#1103;&#1090; &#1085;&#1072; &#1086;&#1089;&#1090;&#1072;&#1085;&#1072;&#1083;&#1080;&#1090;&#1077; &#1089;&#1090;&#1077;&#1087;&#1077;&#1085;&#1080; &#1085;&#1072; &#1089;&#1074;&#1086;&#1073;&#1086;&#1076;&#1072; &#1077; &#1087;&#1086;&#1082;&#1072;&#1079;&#1072;&#1085; &#1074; <a href="../Sketcher_Dialog.html#Solver_messages" title="Sketcher Dialog">solver messages</a>.
 </p>
 <h3><span class="mw-headline" id="White_arrow_on_green_background"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_tip.png&amp;filetimestamp=20240413195037&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_tip.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> White arrow on green background</span></h3>
 <p>This indicates the so called <a href="../PartDesign_Body.html#Tip" title="PartDesign Body">Tip</a> of a <a href="../PartDesign_Body.html" title="PartDesign Body">PartDesign Body</a>. It is usually the last feature in a body and represents the whole body to the world outside of the body, e.g. when the body is exported or used in <a href="../Part_Boolean.html" title="Part Boolean">Part boolean</a> operations. The tip can be changed by the user.
@@ -169,12 +169,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121052950
+Cached time: 20260121053113
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.138 seconds
-Real time usage: 0.186 seconds
+CPU time usage: 0.158 seconds
+Real time usage: 0.831 seconds
 Preprocessor visited node count: 758/1000000
 Post&#8208;expand include size: 38475/2097152 bytes
 Template argument size: 12431/2097152 bytes
@@ -185,19 +185,19 @@ Unstrip post&#8208;expand size: 2222/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   42.227      1 -total
- 26.05%   11.000      1 Template:Std_Base_navi/bg
- 18.78%    7.931      3 Template:Navigation_menu_2
- 15.55%    6.568      1 Template:Interface_navi/bg
- 14.97%    6.321      1 Template:Userdocnavi/bg
-  8.42%    3.554      2 Template:PropertyData
-  5.66%    2.389      1 Template:PropertyView
-  5.40%    2.281      3 Template:Variable
-  4.30%    1.816      1 Template:FALSE
-  4.21%    1.779     19 Template:KEY
+100.00%  209.810      1 -total
+ 23.32%   48.922      1 Template:Std_Base_navi/bg
+ 17.60%   36.929      3 Template:Navigation_menu_2
+ 13.95%   29.271      1 Template:Interface_navi/bg
+ 13.33%   27.958      2 Template:PropertyData
+  9.42%   19.761      1 Template:Userdocnavi/bg
+  8.28%   17.380      5 Template:Version
+  7.94%   16.667     19 Template:KEY
+  5.88%   12.343      3 Template:Variable
+  5.31%   11.150      1 Template:FALSE
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260121052950 and revision id 1741772. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260121053112 and revision id 1741774. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
