--- a/wiki/bg/Tree_View.html
+++ b/wiki/bg/Tree_View.html
@@ -88,8 +88,9 @@
 </p>
 <h3><span id=".D0.91.D1.8F.D0.BB.D0.B0_.D1.81.D1.82.D1.80.D0.B5.D0.BB.D0.BA.D0.B0_.D0.BD.D0.B0_.D0.B7.D0.B5.D0.BB.D0.B5.D0.BD_.D1.84.D0.BE.D0.BD"></span><span class="mw-headline" id="&#1041;&#1103;&#1083;&#1072;_&#1089;&#1090;&#1088;&#1077;&#1083;&#1082;&#1072;_&#1085;&#1072;_&#1079;&#1077;&#1083;&#1077;&#1085;_&#1092;&#1086;&#1085;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_tip.png&amp;filetimestamp=20240413195037&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_tip.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> &#1041;&#1103;&#1083;&#1072; &#1089;&#1090;&#1088;&#1077;&#1083;&#1082;&#1072; &#1085;&#1072; &#1079;&#1077;&#1083;&#1077;&#1085; &#1092;&#1086;&#1085;</span></h3>
 <p>&#1058;&#1086;&#1074;&#1072; &#1087;&#1086;&#1082;&#1072;&#1079;&#1074;&#1072; &#1090;&#1072;&#1082;&#1072; &#1085;&#1072;&#1088;&#1077;&#1095;&#1077;&#1085;&#1086;&#1090;&#1086; <a href="../PartDesign_Body.html#Tip" title="PartDesign Body">Tip</a> &#1085;&#1072; <a href="../PartDesign_Body.html" title="PartDesign Body">PartDesign Body</a>. &#1054;&#1073;&#1080;&#1082;&#1085;&#1086;&#1074;&#1077;&#1085;&#1086; &#1090;&#1086;&#1074;&#1072; &#1077; &#1087;&#1086;&#1089;&#1083;&#1077;&#1076;&#1085;&#1072;&#1090;&#1072; &#1093;&#1072;&#1088;&#1072;&#1082;&#1090;&#1077;&#1088;&#1080;&#1089;&#1090;&#1080;&#1082;&#1072; &#1074; &#1090;&#1103;&#1083;&#1086;&#1090;&#1086; &#1080; &#1087;&#1088;&#1077;&#1076;&#1089;&#1090;&#1072;&#1074;&#1083;&#1103;&#1074;&#1072; &#1094;&#1103;&#1083;&#1086;&#1090;&#1086; &#1090;&#1103;&#1083;&#1086; &#1082;&#1098;&#1084; &#1089;&#1074;&#1077;&#1090;&#1072; &#1080;&#1079;&#1074;&#1098;&#1085; &#1090;&#1103;&#1083;&#1086;&#1090;&#1086;, &#1085;&#1072;&#1087;&#1088;. &#1082;&#1086;&#1075;&#1072;&#1090;&#1086; &#1090;&#1103;&#1083;&#1086;&#1090;&#1086; &#1089;&#1077; &#1080;&#1079;&#1085;&#1072;&#1089;&#1103; &#1080;&#1083;&#1080; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072; &#1074; [Part_Boolean|Part boolean] &#1086;&#1087;&#1077;&#1088;&#1072;&#1094;&#1080;&#1080;. &#1057;&#1098;&#1074;&#1077;&#1090;&#1098;&#1090; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1073;&#1098;&#1076;&#1077; &#1087;&#1088;&#1086;&#1084;&#1077;&#1085;&#1077;&#1085; &#1086;&#1090; &#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1080;&#1090;&#1077;&#1083;&#1103;.
+</p><p><span id="File:FreeCAD_Tree_view_suppressed.png_Red_backslash"></span>
 </p>
-<h3><span class="mw-headline" id="Red_backslash"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_suppressed.png&amp;filetimestamp=20240413201121&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_suppressed.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Red backslash</span></h3>
+<h3><span id=".D0.A7.D0.B5.D1.80.D0.B2.D0.B5.D0.BD.D0.B0_.D0.BD.D0.B0.D0.BA.D0.BB.D0.BE.D0.BD.D0.B5.D0.BD.D0.B0_.D0.BB.D0.B8.D0.BD.D0.B8.D1.8F"></span><span class="mw-headline" id="&#1063;&#1077;&#1088;&#1074;&#1077;&#1085;&#1072;_&#1085;&#1072;&#1082;&#1083;&#1086;&#1085;&#1077;&#1085;&#1072;_&#1083;&#1080;&#1085;&#1080;&#1103;"><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=FreeCAD_Tree_view_suppressed.png&amp;filetimestamp=20240413201121&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Tree_view_suppressed.png" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> &#1063;&#1077;&#1088;&#1074;&#1077;&#1085;&#1072; &#1085;&#1072;&#1082;&#1083;&#1086;&#1085;&#1077;&#1085;&#1072; &#1083;&#1080;&#1085;&#1080;&#1103;</span></h3>
 <p><span style="font-size:small;"><a href="../Release_notes_1.0.html" title="Release notes 1.0">introduced in 1.0</a></span>
 </p><p>This indicates a suppressed <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">PartDesign</a> feature.
 </p>
@@ -170,13 +171,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260121053253
+Cached time: 20260121053513
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.137 seconds
-Real time usage: 0.184 seconds
-Preprocessor visited node count: 758/1000000
+CPU time usage: 0.147 seconds
+Real time usage: 0.212 seconds
+Preprocessor visited node count: 759/1000000
 Post&#8208;expand include size: 38475/2097152 bytes
 Template argument size: 12431/2097152 bytes
 Highest expansion depth: 7/100
@@ -186,19 +187,19 @@ Unstrip post&#8208;expand size: 2223/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   44.525      1 -total
- 31.25%   13.915      1 Template:Std_Base_navi/bg
- 20.28%    9.030      3 Template:Navigation_menu_2
- 13.81%    6.148      1 Template:Userdocnavi/bg
- 10.89%    4.849      1 Template:Interface_navi/bg
-  9.68%    4.312      2 Template:PropertyData
-  5.91%    2.630      3 Template:Variable
-  4.94%    2.199      1 Template:PropertyView
-  4.89%    2.177      2 Template:Caption
-  4.15%    1.846      6 Template:MenuCommand
+100.00%   42.151      1 -total
+ 21.92%    9.238      1 Template:Std_Base_navi/bg
+ 21.83%    9.200      3 Template:Navigation_menu_2
+ 16.20%    6.827      1 Template:Interface_navi/bg
+ 13.51%    5.695      1 Template:Userdocnavi/bg
+  7.98%    3.363      2 Template:PropertyData
+  5.49%    2.315      1 Template:TOCright
+  5.42%    2.286     19 Template:KEY
+  5.18%    2.183      5 Template:Version
+  5.15%    2.170      1 Template:PropertyView
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260121053253 and revision id 1741778. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411533-0!canonical and timestamp 20260121053513 and revision id 1741780. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
